// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CustomFieldWithCondition /> matches snapshot 1`] = `
<input
  class="sc-hBMVcZ hoeMOd"
  id="customFieldWithCondition"
  name="customFieldWithCondition"
  value=""
/>
`;

exports[`<CustomFieldWithCondition /> matches snapshot with requiredCondition met 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE JvWob"
    id="testForm"
  >
    <div
      class="sc-kEqYlL dXeAFH"
    >
      <div
        class="sc-bkbjAj gnGQfC"
      >
        <select
          class="sc-iemXMA ezYUqe"
          name="employment_type"
          type="text"
        >
          <option
            class="sc-hHEjAm hmYdyr"
            disabled=""
            value="select"
          >
            wybierz 
          </option>
          <option
            value="fixed"
          >
            umowa o pracę na czas nieokreślony
          </option>
          <option
            value="temporary"
          >
            umowa o pracę na czas określony
          </option>
          <option
            value="self_employed"
          >
            samozatrudnienie
          </option>
          <option
            value="fixed_partial"
          >
            umowa o pracę na czas nieokreślony (niepełny etat)
          </option>
          <option
            value="government"
          >
            stanowisko rządowe
          </option>
          <option
            value="unemployed"
          >
            bezrobotny
          </option>
          <option
            value="pension"
          >
            emeryt/rencista
          </option>
          <option
            value="agriculture"
          >
            gospodarstwo rolne
          </option>
          <option
            value="student"
          >
            student
          </option>
          <option
            value="housewife"
          >
            gospodyni domowa
          </option>
          <option
            value="other"
          >
            inne
          </option>
          <option
            value="service_contract"
          >
            umowa zlecenie / umowa o dzieło
          </option>
        </select>
        <span
          class="sc-dIvqjp gGSLdt"
        />
      </div>
    </div>
    <div
      class="sc-kEqYlL dXeAFH"
    >
      <div
        class="sc-lmgQde krpvJC"
      >
        <input
          class="sc-hBMVcZ hoeMOd"
          id="customFieldWithCondition"
          name="customFieldWithCondition"
          required=""
          value=""
        />
      </div>
    </div>
  </form>
</div>
`;

exports[`<CustomFieldWithCondition /> matches snapshot with visibleCondition met 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE JvWob"
    id="testForm"
  >
    <div
      class="sc-kEqYlL dXeAFH"
    >
      <div
        class="sc-bkbjAj gnGQfC"
      >
        <select
          class="sc-iemXMA ezYUqe"
          name="employment_type"
          type="text"
        >
          <option
            class="sc-hHEjAm hmYdyr"
            disabled=""
            value="select"
          >
            wybierz 
          </option>
          <option
            value="fixed"
          >
            umowa o pracę na czas nieokreślony
          </option>
          <option
            value="temporary"
          >
            umowa o pracę na czas określony
          </option>
          <option
            value="self_employed"
          >
            samozatrudnienie
          </option>
          <option
            value="fixed_partial"
          >
            umowa o pracę na czas nieokreślony (niepełny etat)
          </option>
          <option
            value="government"
          >
            stanowisko rządowe
          </option>
          <option
            value="unemployed"
          >
            bezrobotny
          </option>
          <option
            value="pension"
          >
            emeryt/rencista
          </option>
          <option
            value="agriculture"
          >
            gospodarstwo rolne
          </option>
          <option
            value="student"
          >
            student
          </option>
          <option
            value="housewife"
          >
            gospodyni domowa
          </option>
          <option
            value="other"
          >
            inne
          </option>
          <option
            value="service_contract"
          >
            umowa zlecenie / umowa o dzieło
          </option>
        </select>
        <span
          class="sc-dIvqjp gGSLdt"
        />
      </div>
    </div>
    <div
      class="sc-kEqYlL dXeAFH"
    >
      <div
        class="sc-lmgQde krpvJC"
      >
        <input
          class="sc-hBMVcZ hoeMOd"
          id="customFieldWithCondition"
          name="customFieldWithCondition"
          value=""
        />
      </div>
    </div>
  </form>
</div>
`;

exports[`<CustomFieldWithCondition /> matches snapshot without requiredCondition met 1`] = `null`;

exports[`<CustomFieldWithCondition /> matches snapshot without visibleCondition met 1`] = `null`;
